# search_engine

./: CMakeLists.txt  README.md
docs/: first.txt  second.txt  thrid.txt
googlTest/: CMakeLists.txt  test.cpp
inc/: Search_server.h  converterJSON.h  invertedIndex.h  json_config.h  search_engine.h
resources/: answer.json  config.json  requests.json
src/: CMakeLists.txt  Search_server.cpp  converterJSON.cpp  invertedIndex.cpp  main.cpp  search_engine.cpp
